fix repo name and url

--- a/metadata/layout.conf
+++ b/metadata/layout.conf
@@ -1,4 +1,4 @@
-repo-name = ahippo-rhvoice-overlay
+repo-name = reznikmm-rhvoice-overlay
 masters = gentoo
 eapis-banned = 0 1
 eapis-deprecated = 0 1 2 3
